Configure server for ssl

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           }
         });
     </script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
     <script data-main="js/main" src="js/libs/require/require.js"></script>
 
 </head>
