MMLC-174 New home page text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </nav>
 
-    <div class="container spacer" id="main-content">   
+    <div class="container" id="main-content">   
     </div>
 
     <div class="container">
