MMLC-147 More clean up for api use

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">MathML Cloud</a>
+                <a class="navbar-brand" href="#/">MathML Cloud</a>
             </div>
             <div id="optionalNav" class="navbar-collapse collapse">
                 
