MMLC-160 Better indication of activity for ajax requests

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/mmlc.css">
+    <link href="/styles/pace.css" rel="stylesheet" />
     <!--STYLES END-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
