MMLC-209 make footer sticky. MMLC-219 update copyright text

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <div class="container" id="main-content">   
     </div>
 
-    <div class="container">
-      <footer>
-        <p>&copy; Benetech 2015</p>
+    <div class="fluid-container">
+      <footer class="footer">
+        <p>MathML Cloud&#8482; is a trademark of Benetech, Inc. This website is &copy; Copyright 2015, Benetech, Inc.</p>
       </footer>
     </div> <!-- /container -->
     <!-- Modal Template. Use for any of your modals. -->
