MMLC-219 UPdate footer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="fluid-container">
       <footer class="footer">
-        <p>MathML Cloud&#8482; is a trademark of Benetech, Inc. This website is &copy; Copyright 2015, Benetech, Inc.</p>
+        <p>MathML Cloud&#8482; is a trademark of <a href="http://benetech.org" target="_blank">Beneficent Technology, Inc</a>. This website is &copy; Copyright 2015, Benetech, Inc.</p>
       </footer>
     </div> <!-- /container -->
     <!-- Modal Template. Use for any of your modals. -->
