--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
     <div class="container" id="main-content">   
     </div>
-
+    <input type="hidden" id="access_token" value="" />
     <div class="fluid-container">
       <footer class="footer">
         <p>MathML Cloud&#8482; is a trademark of <a href="http://benetech.org" target="_blank">Beneficent Technology, Inc</a>. This website is &copy; Copyright 2015, Benetech, Inc.</p>
